--- a/Round3/Manuscript-IEEE/Permuting_Accuracy.bib
+++ b/Round3/Manuscript-IEEE/Permuting_Accuracy.bib
@@ -1785,3 +1785,103 @@ Contact: tongt@hkbu.edu.hk},
 	year={2010},
 	publisher={Institute of Mathematical Statistics}
 }
+
+
+
+@article{feng2015note,
+	title={A note on high-dimensional two-sample test},
+	author={Feng, Long and Sun, Fasheng},
+	journal={Statistics \& Probability Letters},
+	volume={105},
+	pages={29--36},
+	year={2015},
+	publisher={Elsevier}
+}
+
+@article{ahmad2014u,
+	title={A $ $ U $ $-statistic approach for a high-dimensional two-sample mean testing problem under non-normality and Behrens--Fisher setting},
+	author={Ahmad, M Rauf},
+	journal={Annals of the Institute of Statistical Mathematics},
+	volume={66},
+	number={1},
+	pages={33--61},
+	year={2014},
+	publisher={Springer}
+}
+
+@Article{chen_two-sample_2010,
+	Title                    = {A Two-Sample Test for High-Dimensional Data with Applications to Gene-Set Testing},
+	Author                   = {Chen, Song Xi and Qin, Ying-Li and {others}},
+	Journal                  = {The Annals of Statistics},
+	Year                     = {2010},
+	Number                   = {2},
+	Pages                    = {808--835},
+	Volume                   = {38}
+}
+
+@Article{cai_two-sample_2013,
+	Title                    = {Two-{{Sample Covariance Matrix Testing}} and {{Support Recovery}} in {{High}}-{{Dimensional}} and {{Sparse Settings}}},
+	Author                   = {Cai, Tony and Liu, Weidong and Xia, Yin},
+	Journal                  = {Journal of the American Statistical Association},
+	Year                     = {2013},
+	Month                    = mar,
+	Number                   = {501},
+	Pages                    = {265--277},
+	Volume                   = {108},
+	Doi                      = {10.1080/01621459.2012.758041}
+}
+
+@article{friedman1979multivariate,
+	title={Multivariate generalizations of the Wald-Wolfowitz and Smirnov two-sample tests},
+	author={Friedman, Jerome H and Rafsky, Lawrence C},
+	journal={The Annals of Statistics},
+	pages={697--717},
+	year={1979},
+	publisher={JSTOR}
+}
+
+
+@article{szekely2004testing,
+	title={Testing for equal distributions in high dimension},
+	author={Sz{\'e}kely, G{\'a}bor J and Rizzo, Maria L},
+	journal={InterStat},
+	volume={5},
+	number={16.10},
+	year={2004}
+}
+
+
+@article{Biau2005,
+	author = {Biau, G. and Gyorfi, L.},
+	title = {On the Asymptotic Properties of a Nonparametric L1-test Statistic of Homogeneity},
+	journal = {IEEE Trans. Inf. Theor.},
+	issue_date = {November 2005},
+	volume = {51},
+	number = {11},
+	month = nov,
+	year = {2005},
+	issn = {0018-9448},
+	pages = {3965--3973},
+	numpages = {9},
+	url = {http://dx.doi.org/10.1109/TIT.2005.856979},
+	doi = {10.1109/TIT.2005.856979},
+	acmid = {2271897},
+	publisher = {IEEE Press},
+	address = {Piscataway, NJ, USA},
+	keywords = {Central limit theorem, consistent testing, homogeneity testing, large deviations, partitions, poissonization},
+} 
+
+
+@article{Rosenbaum2005,
+	title = {An Exact Distribution-free Test Comparing Two Multivariate Distributions Based on Adjacency},
+	volume = {67},
+	issn = {1369-7412},
+	doi = {10.1111/j.1467-9868.2005.00513.x},
+	number = {4},
+	journal = {Journal of the Royal Statistical Society: Series B (Statistical Methodology)},
+	author = {{Rosenbaum Paul R.}},
+	month = aug,
+	year = {2005},
+	keywords = {Rank test,Combinatorial optimization,Distribution‐free test,Non‐bipartite matching,Nonparametric test,Occupancy distribution},
+	pages = {515-530}
+}
