--- a/Round3/Manuscript-IEEE/preamble.tex
+++ b/Round3/Manuscript-IEEE/preamble.tex
@@ -85,4 +85,5 @@
 \newcommand{\majority}{\accEstim_{Maj}}
 \newcommand{\statistic}{\mathcal{T}}
 \DeclareMathOperator{\Tr}{Tr}
+\newcommand\given[1][]{\:#1\vert\:}
 
