--- a/Round3/Manuscript-IEEE/bare_jrnl.tex
+++ b/Round3/Manuscript-IEEE/bare_jrnl.tex
@@ -275,13 +275,14 @@ It is possible that the signal is present (not only) in means.
 We would thus opt for a two-group GOF test, instead of a location test. 
 Examples of multivariate GOF tests include \cite{bickel1969distribution,friedman1979multivariate,hall2002permutation,szekely2004testing,Biau2005,Rosenbaum2005,eric2008testing,perez2009estimation,vayatis_auc_2009,gretton_kernel_2012-1}.
 
+In contrast to bona-fide two-group tests, we now explain how the classification accuracy can be used as a test statistic.
 
 \subsection{Prediction Accuracy as a Test Statistic}
 An accuracy test amounts to using a predictor's accuracy as a test statistic.  
 
 A predictor\footnote{Known as a \emph{hypothesis} in the machine learning literature.}, $\hyp:\mathcal{X} \to \mathcal{Y}$, is the output of a learning algorithm $\algo$ when applied to the dataset $\data$. 
 The accuracy of predictor\footnote{Known as (the complement of) the \emph{test error} in \cite{hastie_elements_2003}}, $\acc_{\hyp}$, is defined as the probability of $\hyp$ making a correct prediction. 
-The accuracy of an algorithm\footnote{Known as (the complement of) the \emph{expected test error} in \cite{hastie_elements_2003}}, $\acc_{\algo}$, is defined as the expected accuracy over all possible data sets $\data$. 
+The accuracy of a learning algorithm\footnote{Known as (the complement of) the \emph{expected test error} in \cite{hastie_elements_2003}}, $\acc_{\algo}$, is defined as the expected accuracy over all possible data sets $\data$. 
 Formalizing, we denote by $\measure$ the probability measure of $(x, y)$, and by $\measuren$ the joint probability measure of the sample $\data$. 
 We can then write 
 \begin{align}
@@ -295,7 +296,7 @@ where $\indicator{A}$ is the indicator function\footnote{Mutatis mutandis for co
 
 Denoting an estimate of $\acc_{\hyp}$ by $\accEstim_{\hyp}$, and $\acc_{\algo}$ by $\accEstim_{\algo}$, a statistically significant ``better than chance'' estimate of either, is evidence that the classes are distinct. 
 
-Two popular estimates of $\accEstim_{\algo}$ are the \emph{resubstitution estimate}, and the V-fold Cross Validation (CV) estimate.
+Two popular estimates of $\accEstim_{\algo}$ are the \emph{resubstitution accuracy}\footnote{Known as (the complement of) the \emph{train error} in \cite{hastie_elements_2003}}, and the V-fold Cross Validation (CV) estimate.
 \begin{definition}[Resubstitution estimate]
 	\label{def:resubstitution}
 	The resubstitution accuracy estimator of a learning algorithm $\algo$, denoted $\accEstim_{\algo}^{Resub}$,  is defined as
@@ -329,26 +330,26 @@ If estimation is part of a permutation test: should the data be refolded after e
 
 We will now address these questions while bearing in mind that unlike the typical supervised learning setup, we are not interested in an unbiased estimate of $\acc_{\algo}$, but rather in the detection of its departure from chance level. 
 
-\paragraph{Cross validate or not?}
+\paragraph{Cross validate or not}
 For the purpose of statistical testing, bias in $\hat\acc_{\algo}$ is not a problem, as long as it does not invalidate the error rate guarantees. 
 The underlying intuition is that if the same bias is introduced in all permutations, it will not affect the properties of the permutation test. 
 We will thus be considering both cross validated accuracies, and resubstitution accuracies.
 
 
-\paragraph{Balanced folding?}
-The standard practice in V-fold CV is to constrain the data folds to be balanced, i.e. stratified \cite{ojala_permutation_2010}.
+\paragraph{Balanced folding}
+The standard practice in V-fold CV is to constrain the data folds to be balanced, i.e. stratified \cite[for e.g.]{ojala_permutation_2010}.
 This means that each fold has the same number of examples from each class. 
-We will report results with both balanced and unbalanced data foldings. 
+We will report results only with balanced folding, mostly because we will conclude that V-fold CV should not be used for our detection problem. 
 
 
-\paragraph{Refolding?}
+\paragraph{Refolding}
 In V-fold CV, \emph{folding} the data means assigning each observation to one of the $V$ data folds. 
 The standard practice in neuroimaging is to permute labels and refold the data after each permutation. 
 This is done because permuting labels will unbalance the original balanced folding.
 We will adhere to this practice due to its popularity, even though it is computationally more efficient to permute features\footnote{The difference between permuting labels or features is in the mapping to folds. When permuting features, the \textit{label} assignment to folds is fixed. When permuting labels, the \textit{feature} assignment to folds is fixed.} instead of labels, as done by \cite{golland_permutation_2005}.
 
 
-\paragraph{How many folds?}
+\paragraph{How many folds}
 Different authors suggest different rules for the number of folds. 
 We fix the number of folds to $V=4$, and do dot discuss the effect of $V$ because we will ultimately show that V-fold CV is dominated by other cross-validation procedures, and thus, never recommended. 
 
@@ -359,32 +360,37 @@ Table~\ref{tab:collected} collects an initial battery of tests we will be compar
 	\centering
 	\footnotesize
 	\begin{tabular}{l|c|c|c}
-		Name & Algorithm & Resampling & Parameters\\ 
+		Name & Algorithm & Resampling & Remark\\ 
 		\hline
 		\hline
-		Oracle & Hotelling & Resubstitution & -- \\ 
-		Hotelling & Hotelling & Resubstitution & -- \\ 
-		Hotelling.shrink & Hotelling & Resubstitution & -- \\ 
-		Goeman & Hotelling & Resubstitution & -- \\ 
-		sd & Hotelling & Resubstitution & -- \\ 
+		Oracle & $T^2$ & Resubstitution & Known $\Sigma$\\ 
+		Hotelling & $T^2$ & Resubstitution & -- \\
+		Schafer & \cite{schafer_shrinkage_2005} & Resubstitution & -- \\ 
+		Goeman & \cite{goeman2006testing} & Resubstitution & -- \\ 
+		Srivastava & \cite{srivastava_test_2008} & Resubstitution & -- \\ 
+		Gretton & \cite{gretton_kernel_2012-1} & Resubstitution & -- \\ 
+		dCOV & \cite{szekely2004testing} & Resubstitution & -- \\ 
+		Simes & \cite{simes1986improved} & Resubstitution & -- \\ 
+		Cai & \cite{cai_two-sample_2013} & Resubstitution & -- \\ 
 		lda.CV.1 	& LDA & V-fold 			&  -- \\ 
 		lda.noCV.1 	& LDA & Resubstitution 	&  --\\ 
-		svm.CV.1 	& SVM & V-fold 		    & cost=$10$ \\ 
-		svm.CV.2 	& SVM & V-fold 		    & cost=$0.1$ \\ 
-		svm.noCV.1 	& SVM & Resubstitution  & cost=$10$ \\ 
-		svm.noCV.2 	& SVM & Resubstitution  & cost=$0.1$ \\ 
+		svm.CV.c100	& SVM & V-fold 		    & cost=$100$ \\ 
+		svm.CV.c001	& SVM & V-fold 		    & cost=$0.01$ \\ 
+		svm.noCV.c100 	& SVM & Resubstitution  & cost=$100$ \\ 
+		svm.noCV.c001 	& SVM & Resubstitution  & cost=$0.01$ \\ 
+		svm.CV.cCV 	& SVM & V-fold  & cost=CV \\ 
 	\end{tabular} 
 	\captionsetup{type=table}
 	\caption{\footnotesize
 		This table collects the various test statistics we will be studying. 
-		Location tests include: \textit{Oracle}, \textit{Hotelling}, \textit{Hotelling.shrink}, \textit{Goeman}, and \textit{sd}.
-		\textit{Oracle} is the same as Hotelling's $T^2$, only using the generative covariance, and not an estimated one.
-		\textit{Hotelling} is the classical two-group $T^2$ statistic \cite{anderson_introduction_2003}. 
-		\textit{Hotelling.shrink} is a high dimensional version of $T^2$, with the regularized covariance from \cite{schafer_shrinkage_2005}. 
-		\textit{Goeman} and \textit{sd} are other high dimensional versions of the $T^2$, from \cite{goeman2006testing} and \cite{srivastava_testing_2013}.
-		The rest of the tests are accuracy tests, with details given in the table. 
-		For example, \textit{svm.CV.2} is a linear SVM, with V-fold cross validated accuracy, and cost parameter set at $0.1$ \cite{meyer_e1071:_2015}.
-		Another example is \textit{lda.noCV.1}, which is Fisher's LDA, with a resubstituted accuracy estimate.}
+		Tests for dense shits include: \textit{Oracle}, \textit{Hotelling}, \textit{Schafer}, \textit{Goeman}, and \textit{Srivastava}.
+		Tests for sparse shifts include \textit{Cai}.
+		Adaptive tests for shifts include \textit{Simes}.
+		The rests are accuracy tests with details given in the table. 	
+		For example, \textit{svm.CV.c100} is a linear SVM, with V-fold cross validated accuracy, and cost parameter set at $100$ \cite{meyer_e1071:_2015}.
+		\textit{svm.CV.cCV} is a linear SVM, with V-fold CV accuracy, and cost parameter optimized with (an inner) CV. 
+		\textit{lda.noCV.1} is Fisher's LDA, with a resubstituted accuracy estimate.
+		}
 	\label{tab:collected}
 \end{tcolorbox}
 
